--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Rock, Paper, Scissors</title>
 </head>
 
-<body>
-  <h1>Thanks for playing!</h1>
+<body style="background-image: url('assets/images/rps.jpeg'); background-repeat: no-repeat; background-size: cover; ">
+  <h1 style="text-align: center; margin-top: 20rem;font-family: 'Courier New', Courier, monospace; font-size: 3rem;">Thanks for playing!</h1>
   
   <script src="./assets/script.js"></script>
 </body>
